# UnerixDaemon

./: README.md  settings.gradle.kts
daemon/: build.gradle.kts
daemon/src/androidTest/kotlin/io/unerix/daemon/: ExampleInstrumentedTest.kt
daemon/src/main/cpp/: CMakeLists.txt  config.hpp  context_manager.cpp  context_manager.hpp  entry.cpp  entry.hpp  jni_env_guard.cpp  jni_env_guard.hpp  jvm_manager.cpp  jvm_manager.hpp  logging.hpp  main.cpp  method_register.cpp  method_register.hpp  render_engine.cpp  render_engine.hpp
daemon/src/main/java/io/unerix/daemon/: NativeLib.kt  UnerixView.kt
daemon/src/main/kotlin/io/unerix/daemon/: UnerixView.kt
daemon/src/test/kotlin/io/unerix/daemon/: ExampleUnitTest.kt
demo/: build.gradle.kts
demo/src/androidTest/java/io/unerix/daemon/demo/: ExampleInstrumentedTest.kt
demo/src/main/: AndroidManifest.xml
demo/src/main/java/io/unerix/daemon/demo/: MainActivity.kt
demo/src/main/java/io/unerix/daemon/demo/ui/theme/: Color.kt  Theme.kt  Type.kt
demo/src/main/res/values/: strings.xml  themes.xml
demo/src/test/java/io/unerix/daemon/demo/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
stub/: build.gradle.kts
stub/src/androidTest/java/io/unerix/core/: ExampleInstrumentedTest.kt
stub/src/main/: AndroidManifest.xml
stub/src/main/java/io/unerix/core/: MainActivity.kt
stub/src/main/java/io/unerix/core/ui/theme/: Color.kt  Theme.kt  Type.kt
stub/src/main/res/values/: strings.xml
stub/src/test/java/io/unerix/core/: ExampleUnitTest.kt
